move react-scripts to dependencies

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:5000/api/classify
+REACT_APP_API_URL=https://copoclassifier.onrender.com
 REACT_APP_HISTORY_API=http://localhost:5000/api/history
