--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "co-po-client",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "react": "^18.2.0",
